--- a/h10_DeviceDriver/h10_DeviceDriver.vcxproj.filters
+++ b/h10_DeviceDriver/h10_DeviceDriver.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="device_driver.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -30,6 +33,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="flash_memory_device.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
